FINALLY SYNCHRONIZED ANNOUNCEMENTS
πλέον συγχρονίζονται ολες οι ανακοινώσεις στον Μαθητή και το Πανεπιστήμιο, ακόμα και οι καινουριεσς που προστίθενται από το Πανεπιστήμιο